--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
     
     <div id="negociacoesView"></div>
 
+    <script src="js/app/dao/NegociacaoDao.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
