--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     </form>
     
     <div class="text-center">
-        <button onclick="negociacaoController.importaNegociacoes()" class="btn btn-primary text-center" type="button">
+        <button onclick="negociacaoController.importaNegociacoes()" class="btn btn-primary text-center disabled" type="button">
             Importar Negociações
         </button>
         <button onclick="negociacaoController.apaga()" class="btn btn-primary text-center" type="button">
