--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
     <div id="negociacoesView"></div>
 
     <script src="js/app/polyfill/es6.js"></script>
+    <script src="js/app/polyfill/fetch.js"></script>
     <script src="js/app/dao/NegociacaoDao.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
